--- a/TestProjectForShareRecipies/appsettings.json
+++ b/TestProjectForShareRecipies/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TestProjectForShareRecipies-3AE93722-5136-4408-A5E0-42DBE45C338A;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-5BE95CR;Database=TestProjectForShareRecipies;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
