Create AllUsers Page with controller and service. Start to implement UserDetails.

--- a/TestProjectForShareRecipies/TestProjectForShareRecipies.csproj
+++ b/TestProjectForShareRecipies/TestProjectForShareRecipies.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\HomeAdmin\" />
+    <Folder Include="Areas\Admin\Models\Home\" />
   </ItemGroup>
 
   <ItemGroup>
