Add possability to delete recipes of users by Amin.

--- a/TestProjectForShareRecipies/TestProjectForShareRecipies.csproj
+++ b/TestProjectForShareRecipies/TestProjectForShareRecipies.csproj
@@ -22,6 +22,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\Home\" />
+    <Folder Include="Areas\Admin\Models\RecipeManagement\" />
+    <Folder Include="Areas\Admin\Views\RecipeManagement\" />
   </ItemGroup>
 
   <ItemGroup>
